# Peer-Chat

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ChatWindow.h  NetworkManager.h
src/: ChatWindow.cpp  NetworkManager.cpp  main.cpp
